--- a/client/package.json
+++ b/client/package.json
@@ -1,21 +1,18 @@
 {
   "name": "fictional-spoon",
   "version": "1.2.3",
-  "description": "amazing webpack app and server",
+  "description": "this is such a crazy cool webapp",
   "main": "index.js",
   "scripts": {
-    "buildClient": "cd ./client && npm run build",
-    "startServer": "nodemon ./server/server.js",
-    "serve": "concurrently \"cd client && npm run dev\" \"cd server && npm run dev\""
+    "build": "webpack",
+    "dev": "webpack serve"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/fixedOtter/fictional-spoon.git"
   },
   "keywords": [
-    "webpack",
-    "express",
-    "nodejs"
+    "webpack"
   ],
   "author": "fixedOtter",
   "license": "GPL-3.0",
@@ -24,6 +21,15 @@
   },
   "homepage": "https://github.com/fixedOtter/fictional-spoon#readme",
   "devDependencies": {
-    "concurrently": "^7.3.0"
+    "@babel/core": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
+    "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
+    "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.10.0",
+    "workbox-webpack-plugin": "^6.5.4"
   }
 }
