--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,8 @@
   "description": "this is such a crazy cool webapp",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "dev": "webpack serve"
+    "build": "NODE_ENV=production webpack",
+    "dev": "NODE_ENV=dev webpack serve"
   },
   "repository": {
     "type": "git",
@@ -26,10 +26,12 @@
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.10.0",
+    "webpack-pwa-manifest": "^4.3.0",
     "workbox-webpack-plugin": "^6.5.4"
   }
 }
